[package]
name = "rssh"
version = "0.1.0"
edition = "2021"
description = "一个用Rust编写的SSH连接管理工具"

[dependencies]
ssh2 = "0.9.4"
clap = { version = "4.3.0", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = "1.0.71"
dirs = "5.0.1"
rpassword = "7.2.0"
colored = "2.0.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
termios = "0.3.3"
ctrlc = "3.4.1"
libc = "0.2.150"
chrono = "0.4.31"
which = "4.4.0"
russh = "0.40.1"
russh-keys = "0.40.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.0"
futures = "0.3.28"
async-trait = "0.1.75"
