[package]
name = "rssh"
version = "0.1.0"
edition = "2021"
description = "一个用Rust编写的SSH连接管理工具"

[[bin]]
name = "rssh"
path = "src/main.rs"

[[bin]]
name = "rzsz-proxy"
path = "src/rzsz_proxy.rs"

[dependencies]
ssh2 = "0.9.4"
clap = { version = "4.4.18", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
anyhow = "1.0.79"
dirs = "5.0.1"
rpassword = "7.3.1"
colored = "2.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4"] }
termios = "0.3.3"
ctrlc = "3.4.2"
libc = "0.2.153"
chrono = "0.4.31"
which = "4.4.0"
russh = "0.40.2"
russh-keys = "0.40.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.0"
futures = "0.3.30"
async-trait = "0.1.77"
shell-escape = "0.1.5"
toml = "0.8.10"
pathdiff = "0.2.1"
shellexpand = "3.1.0"
log = "0.4.20"
env_logger = "0.11.1"
regex = "1.10.3"
lazy_static = "1.4.0"
crossterm = "0.27.0"
terminal_size = "0.3.0"
nix = "0.27.1"
base64 = "0.21.7"
tempfile = "3.10.0"
